# melon-os

./: .gitignore  AGENTS.md  Agents OS 可行性与产品方案.md  Cargo.toml  README.md  README.zh-CN.md  melon Home 全屋智能技术方案.md  melonOS MVP 开发计划.md  melonOS 技术方案.md
apps/studio/: index.html  package-lock.json  package.json
apps/studio/src/: App.tsx  index.css
apps/studio/src/components/: Panels.tsx
apps/studio/src/lib/: api.ts  panels.test.ts  panels.ts
apps/studio/src/pages/: PackEditor.tsx  PackList.tsx
crates/melon-agent/: Cargo.toml
crates/melon-agent/src/: executor.rs  lib.rs  task.rs
crates/melon-kb/: Cargo.toml
crates/melon-kb/src/: lib.rs
crates/melon-mcp/: Cargo.toml
crates/melon-mcp/src/: lib.rs
crates/melon-permission/: Cargo.toml
crates/melon-permission/src/: lib.rs
crates/melon-runtime/: Cargo.toml
crates/melon-runtime/src/: db.rs  lib.rs  main.rs  routes.rs  state.rs
crates/melon-runtime/src/routes/: audit.rs  eval.rs  files.rs  knowledge.rs  packs.rs  run.rs  tasks.rs  tasks_detail.rs  validate.rs
crates/melon-runtime/tests/: api_integration.rs  integration_tests.rs
crates/melon-scenario/: Cargo.toml
crates/melon-scenario/src/: eval.rs  knowledge.rs  lib.rs  manifest.rs  pack.rs  permission.rs  tool.rs  ui.rs  validation.rs  workflow.rs
crates/melon-tools/: Cargo.toml
crates/melon-tools/src/: adapter.rs  lib.rs  mock_adapter.rs  registry.rs
crates/melon-ui-protocol/: Cargo.toml
crates/melon-ui-protocol/src/: lib.rs
doc/: phase0-code-review.md  requirements.md
scenarios/demo-ops/: manifest.yaml  role.md  test-new.yaml
scenarios/demo-ops/evals/: cases.yaml
scenarios/demo-ops/knowledge/: sources.yaml
scenarios/demo-ops/knowledge/fixtures/: inspection_runbook.md
scenarios/demo-ops/permissions/: policy.yaml
scenarios/demo-ops/tools/: tools.yaml
scenarios/demo-ops/ui/: layout.yaml
scenarios/demo-ops/workflows/: default.yaml
scenarios/melon-home/: manifest.yaml  role.md
scenarios/melon-home/evals/: cases.yaml
scenarios/melon-home/home/: rooms.yaml
scenarios/melon-home/permissions/: policy.yaml
scenarios/melon-home/tools/: home_assistant.yaml
scenarios/melon-home/ui/: layout.yaml
scenarios/melon-home/workflows/: scenes.yaml
