[workspace]
resolver = "2"
members = [
    "crates/melon-runtime",
    "crates/melon-agent",
    "crates/melon-tools",
    "crates/melon-mcp",
    "crates/melon-kb",
    "crates/melon-permission",
    "crates/melon-scenario",
    "crates/melon-ui-protocol",
]

[workspace.dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
notify = "7"

# Schema validation
schemars = "0.8"
jsonschema = "0.28"

# WebSocket (built into axum 0.8)
axum-extra = { version = "0.10" }

# Async
async-trait = "0.1"
