[package]
name = "melon-kb"
version = "0.1.0"
edition = "2021"
description = "Knowledge Layer - file parsing, search, source tracking"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
