[package]
name = "melon-runtime"
version = "0.1.0"
edition = "2021"
description = "melonOS Runtime Kernel - task lifecycle, event bus, state store, scheduler"

[lib]
name = "melon_runtime"
path = "src/lib.rs"

[[bin]]
name = "melon-runtime"
path = "src/main.rs"

[dependencies]
melon-scenario = { path = "../melon-scenario" }
melon-tools = { path = "../melon-tools" }
melon-permission = { path = "../melon-permission" }
melon-kb = { path = "../melon-kb" }
melon-ui-protocol = { path = "../melon-ui-protocol" }
melon-agent = { path = "../melon-agent" }

axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
http = "1"
tower = { workspace = true }
