[package]
name = "melon-tools"
version = "0.1.0"
edition = "2021"
description = "Tool / MCP Layer - tool registry, adapter interface, MCP client/server"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
